[gd_scene load_steps=7 format=3 uid="uid://h6gh84l3l6v7"]

[ext_resource type="Script" uid="uid://oc6qppx0sgdj" path="res://engine/board.gd" id="1_tx6nw"]
[ext_resource type="Texture2D" uid="uid://doq8mai3gumpy" path="res://assets/chess/vector-chess-pieces/Board Brown.svg" id="2_nglv8"]
[ext_resource type="FontFile" uid="uid://cckircs02opgx" path="res://assets/fonts/Exo2-SemiBold.ttf" id="3_nglv8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fv4ni"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.00392157, 0.00392157, 0.00392157, 0.85098)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 0.376471)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.25098)
shadow_size = 30
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dxjtj"]
content_margin_left = 24.0
content_margin_top = 24.0
content_margin_right = 24.0
content_margin_bottom = 24.0
bg_color = Color(0.00392157, 0.00392157, 0.00392157, 0.85098)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 0.376471)
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_right = 22
corner_radius_bottom_left = 22
shadow_color = Color(0, 0, 0, 0.25098)
shadow_size = 30
shadow_offset = Vector2(0, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tx6nw"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Board" type="Node2D"]
script = ExtResource("1_tx6nw")

[node name="BoardBackdrop" type="ColorRect" parent="."]
z_index = -1
custom_minimum_size = Vector2(700, 600)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -580.0
offset_top = -323.0
offset_right = 577.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.12549)

[node name="Camera2D" type="Camera2D" parent="."]
limit_smoothed = true

[node name="BoardSprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_nglv8")

[node name="LeftPanel" type="Panel" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -568.66
offset_top = -292.0
offset_right = -308.66
offset_bottom = 292.0
grow_vertical = 2
pivot_offset = Vector2(10, 10)
theme_override_styles/panel = SubResource("StyleBoxFlat_fv4ni")

[node name="VBox" type="VBoxContainer" parent="LeftPanel"]
layout_mode = 1
offset_left = 13.815
offset_top = 5.14
offset_right = 197.815
offset_bottom = 167.14
pivot_offset = Vector2(10, 10)
theme_override_constants/separation = 12

[node name="Label_Title" type="Label" parent="LeftPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.909804, 0.690196, 1)
theme_override_fonts/font = ExtResource("3_nglv8")
theme_override_font_sizes/font_size = 32
text = "PLAYER"

[node name="Label_Gold" type="Label" parent="LeftPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.909804, 0.690196, 1)
theme_override_fonts/font = ExtResource("3_nglv8")
theme_override_font_sizes/font_size = 26
text = "ðŸª™ Gold: 0"

[node name="Label_Upgrades" type="Label" parent="LeftPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.909804, 0.690196, 1)
theme_override_fonts/font = ExtResource("3_nglv8")
theme_override_font_sizes/font_size = 26
text = "ðŸ§© Upgrades:"

[node name="UpgradesList" type="Label" parent="LeftPanel/VBox"]
layout_mode = 2

[node name="RightPanel" type="Panel" parent="."]
offset_left = 316.0
offset_top = -292.0
offset_right = 576.0
offset_bottom = 290.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dxjtj")

[node name="VBox" type="VBoxContainer" parent="RightPanel"]
layout_mode = 1
offset_left = 15.615
offset_top = 5.58
offset_right = 154.615
offset_bottom = 144.58
theme_override_constants/separation = 12

[node name="Label_Enemy" type="Label" parent="RightPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.909804, 0.690196, 1)
theme_override_fonts/font = ExtResource("3_nglv8")
theme_override_font_sizes/font_size = 32
text = "ENEMY"

[node name="Label_Stage" type="Label" parent="RightPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.909804, 0.690196, 1)
theme_override_fonts/font = ExtResource("3_nglv8")
theme_override_font_sizes/font_size = 26
text = "ðŸŽ¯ Stage X"

[node name="Label_Rules" type="Label" parent="RightPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.909804, 0.690196, 1)
theme_override_fonts/font = ExtResource("3_nglv8")
theme_override_font_sizes/font_size = 26
text = "ðŸ“œ Mutators:"

[node name="RulesList" type="VBoxContainer" parent="RightPanel/VBox"]
layout_mode = 2

[node name="UI" type="CanvasLayer" parent="."]

[node name="StatusLabel" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -63.0
offset_top = -48.0
offset_right = 46.0
offset_bottom = 7.00012
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(0, -1.45)
size_flags_vertical = 8
theme_override_font_sizes/font_size = 28
text = "Blank"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="UI"]
custom_minimum_size = Vector2(0, 4)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -26.0
offset_right = 300.0
offset_bottom = -22.0
grow_vertical = 2
color = Color(0, 0, 0, 0.12549)

[node name="ToolsPanel" type="PanelContainer" parent="UI"]
offset_left = 911.89
offset_top = 398.43
offset_right = 1136.89
offset_bottom = 580.43
pivot_offset = Vector2(10, 10)

[node name="MarginContainer" type="MarginContainer" parent="UI/ToolsPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ToolsPanel/MarginContainer"]
layout_mode = 2

[node name="LblTitle" type="Label" parent="UI/ToolsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "TOOLS"

[node name="BtnUndo" type="Button" parent="UI/ToolsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Undo move"

[node name="ChkAIBlack" type="CheckButton" parent="UI/ToolsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "AI plays black"

[node name="BtnCopyFen" type="Button" parent="UI/ToolsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Copy FEN
"

[node name="Panel" type="Panel" parent="."]
offset_left = 93.0
offset_top = 14.0
offset_right = 133.0
offset_bottom = 54.0
theme_override_styles/panel = SubResource("StyleBoxFlat_tx6nw")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = -26.64
offset_right = 13.36
offset_bottom = 40.0

[node name="BudgetLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
